# kendryte-freertos-project

./: .gitmodules  CMakeLists.txt  KendryteToolchain.cmake  LICENSE  README.md
port/: ExternalInterruptHandler.c  FreeRTOSConfig.h  freertos_risc_v_chip_specific_extensions.h
src/: main.c
